k8s/istio-bg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-bg
  labels:
    istio-injection: enabled
