k8s/istio-bg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-stable
  namespace: istio-bg
  labels:
    app: nginx-bg
  annotations:
    harness.io/primary-service: "true"
spec:
  selector:
    app: nginx-bg
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-stage
  namespace: istio-bg
  labels:
    app: nginx-bg
  annotations:
    harness.io/stage-service: "true"
spec:
  selector:
    app: nginx-bg
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
